--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -6,6 +6,8 @@
 
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+
+    cursor: pointer;
 }
 
 #tariffs_icons, #tariffs_name{
@@ -21,4 +23,16 @@
 .tariff_icon{
     height: 25px;
     width: 50px;
+}
+
+// активный нав
+
+.tariff_nav_active{
+    background-color: #DD0000;
+    color: white;
+}
+
+.tariff_nav_inactive{
+    background-color: white;
+    color: #B2B2B2;
 }
