--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -16,9 +16,9 @@
     vertical-align: middle;
 }
 
-#tariffs_name{
-    color: #B2B2B2;
-}
+// #tariffs_name{
+//     color: #B2B2B2;
+// }
 
 .tariff_icon{
     height: 25px;
