--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -2,23 +2,25 @@
 .btn_holder{
     min-height: 50px;
     min-width: 200px;
-    margin: 0px 90px;
+    margin: 0px 50px;
 
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
 
     cursor: pointer;
+    text-align: center;
 }
 
+// иконки и название
 #tariffs_icons, #tariffs_name{
     height: 20px;
     margin: 10px 0px;
     vertical-align: middle;
 }
 
-// #tariffs_name{
-//     color: #B2B2B2;
-// }
+#tariffs_name{
+    font-size: 15px;
+}
 
 .tariff_icon{
     height: 25px;
