--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,4 +1,26 @@
 
+// аватар
+$side_w:150px;
+$side_h:200px;
+
+.avatar_holder{
+    width: $side_w;
+    height: $side_h;
+
+    // border-radius: 15px;
+}
+
+.avatar{
+    width: $side_w;
+    height: $side_h;
+
+    border-radius: 10px;
+
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+}
+
+// конец аватара
+
 // номер телефона
 #phone_holder{
     font-size: 20px;
@@ -7,6 +29,6 @@
 }
 
 .phone_tg{
-    margin: 0px 10px;
+    margin-left: 15px;
 }
 // конец номер телефона
