--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -1,7 +1,7 @@
 // овновное
 .btn_holder{
     min-height: 50px;
-    min-width: 200px;
+    // min-width: 200px;
     margin: 0px 50px;
 
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
@@ -9,6 +9,12 @@
 
     cursor: pointer;
     text-align: center;
+}
+
+@media (max-width:743px){
+    .btn_holder{
+        display: none;
+    }
 }
 
 
