--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -12,10 +12,11 @@
 .input_holder{
     position: relative;
     padding: 20px;
+
+    margin: 15px 5px;
 }
 
 .input_field{
-    margin: 0px 5px;
     font-size: 20px;
     border: none;
       border-bottom: 1px solid #000000;
@@ -23,7 +24,6 @@
       border-top-left-radius: 0.25rem;
       border-top-right-radius: 0.25rem;
       background-color: #f5f5f500;
-    // width: 300px;
 }
 
 .input_field:focus{
@@ -46,14 +46,14 @@
 }
 
 @media (max-width:991px){
-    .input_field, .input_holder label{
-        position: absolute;
-        left:50%;top:50%;
-        padding: 15px 2px 4px 10px;
-        margin: 0px 0px 5px 1px;
-        margin-left: -113px;
-        margin-top: -15px;
-    }
+    // .input_field, .input_holder label{
+    //     position: absolute;
+    //     left:50%;top:50%;
+    //     padding: 15px 2px 4px 10px;
+    //     margin: 0px 0px 5px 1px;
+    //     margin-left: -113px;
+    //     margin-top: -15px;
+    // }
 
     // .input_field:focus + label{
     //     font-size: 12px;
@@ -65,6 +65,12 @@
     //     margin: -15px 0px 0px 1px;
     // }
 }
+
+// @media (max-width:500px){
+//     .input_field{
+//         width: inherit;
+//     }
+// }
 
 .input_field::placeholder{
     color: transparent;
