--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -36,6 +36,7 @@
 .input_holder label{
     color: rgb(187, 187, 187);
     transition: all .1s ease-in-out;
+    cursor: text;
 }
 
 .input_field, .input_holder label{
@@ -45,32 +46,7 @@
     margin: 0px 0px 5px 1px;
 }
 
-@media (max-width:991px){
-    // .input_field, .input_holder label{
-    //     position: absolute;
-    //     left:50%;top:50%;
-    //     padding: 15px 2px 4px 10px;
-    //     margin: 0px 0px 5px 1px;
-    //     margin-left: -113px;
-    //     margin-top: -15px;
-    // }
 
-    // .input_field:focus + label{
-    //     font-size: 12px;
-    //     margin: -15px 0px 0px 1px;
-    // }
-    
-    // .input_field:not(:placeholder-shown) + label{
-    //     font-size: 12px;
-    //     margin: -15px 0px 0px 1px;
-    // }
-}
-
-// @media (max-width:500px){
-//     .input_field{
-//         width: inherit;
-//     }
-// }
 
 .input_field::placeholder{
     color: transparent;
