--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -27,10 +27,10 @@
 }
 
 .input_field:focus{
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+    // box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
     outline: none;
-    border-radius: 0.25rem;
-    border: 1px solid rgb(68, 186, 255);
+    // border-radius: 0.25rem;
+    // border: 1px solid rgb(68, 186, 255);
 }
 
 .input_holder label{
@@ -60,4 +60,17 @@
 .input_field:not(:placeholder-shown) + label{
     font-size: 12px;
     margin: -15px 0px 0px 1px;
+}
+
+.request_btn{
+    border: none;
+    background-color: #DD0000;
+    color: white;
+    font-weight: 500;
+    font-size: 20px;
+    border-radius: 5px;
+}
+
+.request_btn:hover{
+    background-color: #ec4141;
 }
