--- a/src/components/TariffCards.scss
+++ b/src/components/TariffCards.scss
@@ -52,7 +52,8 @@
 .type_holder{
     border: 1px solid white;
     border-radius: 15px;
-    padding: 5px;
+    // padding: 5px;
+    padding: 5px 10px;
     // width: 150px;
     margin-left: auto;
     margin-right: 0px;
