--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,14 @@
 
 // конец локации
 
+// ссылка на форму жалоб и предложений
+
+#link_to_report{
+  text-decoration: none;
+}
+
+// конец ссылки на форму жалоб и предложений 
+
 // акция
 .action_holder{
   color: #DD0000;
