--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -104,3 +104,9 @@
 .phone_validation{
     color: rgb(255, 32, 32);
 }
+
+.request_success{
+    font-weight: 500;
+    color: #DD0000;
+    display:none;
+}
