--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -1,21 +1,26 @@
 // овновное
+.tariffs_nav_holder{
+    margin-left: 50px;
+}
+
 .btn_holder{
     min-height: 50px;
+    width: 50px;
     // min-width: 200px;
     margin: 0px 50px;
 
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    border-radius: 50%;
 
     cursor: pointer;
     text-align: center;
 }
 
-@media (max-width:743px){
-    .btn_holder{
-        display: none;
-    }
-}
+// @media (max-width:743px){
+//     .btn_holder{
+//         justify-content: center;
+//     }
+// }
 
 
 // иконки и название
@@ -31,7 +36,8 @@
 
 .tariff_icon{
     height: 25px;
-    width: 50px;
+    width: 25px;
+    padding:0px!important;
 }
 
 // активный нав
