--- a/src/components/MoreWindow.scss
+++ b/src/components/MoreWindow.scss
@@ -1,3 +1,6 @@
+@import "./colors.scss";
+
+
 .more_header{
     font-weight: 700;
     font-size: 20px;
@@ -5,7 +8,7 @@
 
 
 .more_val_name{
-    color: #B2B2B2;
+    color: $gray;
     font-weight: 500;
 }
 
