--- a/src/components/TariffBtn.scss
+++ b/src/components/TariffBtn.scss
@@ -1,3 +1,5 @@
+@import "./colors.scss";
+
 // овновное
 .tariffs_nav_holder{
     margin-left: 50px;
@@ -43,8 +45,8 @@
 // активный нав
 
 .tariff_nav_active{
-    background-color: #DD0000;
-    color: white;
+    background-color: $red;
+    color: $white;
 }
 
 .tariff_nav_active:hover{
@@ -52,8 +54,8 @@
 }
 
 .tariff_nav_inactive{
-    background-color: white;
-    color: #B2B2B2;
+    background-color: $white;
+    color: $gray;
 }
 
 .tariff_nav_inactive:hover{
