--- a/src/App.scss
+++ b/src/App.scss
@@ -45,3 +45,9 @@
   font-size: 20px;
   font-weight: 500;
 }
+
+@media screen and(min-width:576px) {
+  .tariffs_nav_holder{
+    margin-left: 50px;
+  }
+}
