--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -26,6 +26,8 @@
       border-top-left-radius: 0.25rem;
       border-top-right-radius: 0.25rem;
       background-color: #f5f5f500;
+
+    width: 200px;
 }
 
 .input_field:focus{
@@ -65,6 +67,12 @@
     left:0;top:0;
     padding: 15px 2px 4px 10px;
     margin: 40px 0px 1px 1px;
+}
+
+@media screen and(max-width:991px) {
+    .input_holder .validation{
+        left: calc(50% - 100px);
+    }
 }
 
 .validation_hidden{
