--- a/src/components/TariffCards.scss
+++ b/src/components/TariffCards.scss
@@ -2,6 +2,7 @@
 
 // основное
 .tariff_card_holder{
+    position: relative;
     max-width: 430px;
     min-height: 150px;
     box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
@@ -11,6 +12,26 @@
     padding: 10px 10px;
 
     margin: 10px 15px;
+}
+
+.tariffs_holder_nav_btn{
+    background: none;
+    width: 48px;
+    height: 48px;
+    border: none;
+    position: absolute;
+    padding: 0;
+}
+
+.tariffs_holder_nav_btn_right{
+    right:1%;
+
+    transform: rotate(90deg);
+}
+
+.tariffs_holder_nav_btn_left{
+    left:1%;
+    transform: rotate(-90deg);
 }
 
 // карточка
