--- a/src/components/TariffCards.scss
+++ b/src/components/TariffCards.scss
@@ -26,12 +26,12 @@
 .tariffs_holder_nav_btn_right{
     right:1%;
 
-    transform: rotate(90deg);
+    transform: rotate(180deg);
 }
 
 .tariffs_holder_nav_btn_left{
     left:1%;
-    transform: rotate(-90deg);
+    // transform: rotate(-90deg);
 }
 
 // карточка
