link to tariffs

--- a/src/components/CallRequest.scss
+++ b/src/components/CallRequest.scss
@@ -105,6 +105,10 @@
     animation: gradient 5s ease infinite;
 }
 
+#link_to_tariffs{
+    text-decoration: none;
+}
+
 .request_btn:hover{
     background-color: #ec4141;
 }
