--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -57,7 +57,7 @@ $side_h:175px;
 
 @media (min-width:768px){
     .phone_tg{
-        // margin-left: 15px;
+        margin-left: 15px;
     }
 }
 // конец номер телефона
